# ProtoXEF

./: CMakeLists.txt  README.md  build.bat
.zed/: settings.json
client/: CMakeLists.txt
client/src/: main.cpp
server/: CMakeLists.txt
server/src/: main.cpp
shared/: CMakeLists.txt
shared/window/: darkmode.hpp  styling.hpp  window.cpp  window.h  window.hpp
